--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<a href="blog.html">Go to blog</a>
 		<hr>
 		<!-- Headings -->
-		<h1>Heading One</h1>
+		<h1>Testing out Git</h1>
 		<h2>Heading Two</h2>
 		<h3>Heading Three</h3>
 		<h4>Heading Four</h4>
