--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Paragraph -->
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			I can be as strong as I want, just apply the compounding effect
 			tempor <strong>incididunt ut labore</strong> et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud <em>exercitation ullamco</em> laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
