This is the first heading

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<hr>
 		<!-- Headings -->
 		<h1>Testing out Git</h1>
-		<h2>1</h2>
+		<h2>This is the first heading</h2>
 		<h3>2</h3>
 		<h4>3</h4>
 		<h5>4</h5>
